--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<title>PODER - Partido Político</title>
-	<link rel="stylesheet" href="/styles.css">
+	<link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header class="header">
         <div class="header__img">
-            <img src="/img/logo-palabra.png" alt="Logo partido político Poder">
+            <img src="../img/logo-palabra.png" alt="Logo partido político Poder">
         </div>
     </header>
 	<div class="hero">
@@ -28,16 +28,16 @@
 	<section class="propuestas" id="propuestas">
         <h1 class="propuestas__title">Nuestras Propuestas</h1>
         <div class="propuestas__list">
-            <a href="/public/economicas.html#description" class="acord__btn">REFORMA ECONÓMICA</a>
-            <a href="/public/laboral.html#description" class="acord__btn">REFORMA LABORAL</a>
-            <a href="/public/humanos.html#description" class="acord__btn">RECURSOS HUMANOS</a>
-            <a href="#" class="acord__btn">LA VIVIENDA UN DERECHO</a>
-            <a href="/public/jovenes.html#description" class="acord__btn">JÓVENES</a>
-            <a href="#" class="acord__btn">EMPLEO PÚBLICO</a>
-            <a href="/public/naturales.html#description" class="acord__btn">TURISMO</a>
+            <a href="economicas.html#description" class="acord__btn">REFORMA ECONÓMICA</a>
+            <a href="laboral.html#description" class="acord__btn">REFORMA LABORAL</a>
+            <a href="humanos.html#description" class="acord__btn">RECURSOS HUMANOS</a>
+            <a href="vivienda.html#description" class="acord__btn">LA VIVIENDA UN DERECHO</a>
+            <a href="jovenes.html#description" class="acord__btn">JÓVENES</a>
+            <a href="empleo.html#description" class="acord__btn">EMPLEO PÚBLICO</a>
+            <a href="#" class="acord__btn">TURISMO</a>
             <a href="#" class="acord__btn">RECURSOS NATURALES</a>
-            <a href="/public/ambiente.html#description" class="acord__btn">MEDIO AMBIENTE</a>
-            <a href="/public/seguridad.html#description" class="acord__btn">SEGURIDAD NACIONAL Y REFORMA JUDICIAL</a>
+            <a href="#" class="acord__btn">MEDIO AMBIENTE</a>
+            <a href="#" class="acord__btn">SEGURIDAD NACIONAL Y REFORMA JUDICIAL</a>
         </div>
     </section>
     <footer class="footer">
