--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 	<section class="propuestas" id="propuestas">
         <h1 class="propuestas__title">Nuestras Propuestas</h1>
         <div class="propuestas__list">
-            <a href="public/economicas.html#description" class="acord__btn">REFORMA ECONÓMICA</a>
-            <a href="public/laboral.html#description" class="acord__btn">REFORMA LABORAL</a>
-            <a href="public/humanos.html#description" class="acord__btn">RECURSOS HUMANOS</a>
-            <a href="#" class="acord__btn">LA VIVIENDA UN DERECHO</a>
-            <a href="public/jovenes.html#description" class="acord__btn">JÓVENES</a>
-            <a href="public/empleo.html#description" class="acord__btn">EMPLEO PÚBLICO</a>
+            <a href="pages/economicas.html#description" class="acord__btn">REFORMA ECONÓMICA</a>
+            <a href="pages/laboral.html#description" class="acord__btn">REFORMA LABORAL</a>
+            <a href="pages/humanos.html#description" class="acord__btn">RECURSOS HUMANOS</a>
+            <a href="pages/vivienda.html#description" class="acord__btn">LA VIVIENDA UN DERECHO</a>
+            <a href="pages/jovenes.html#description" class="acord__btn">JÓVENES</a>
+            <a href="pages/empleo.html#description" class="acord__btn">EMPLEO PÚBLICO</a>
             <a href="#" class="acord__btn">TURISMO</a>
             <a href="#" class="acord__btn">RECURSOS NATURALES</a>
             <a href="#" class="acord__btn">MEDIO AMBIENTE</a>
