Update API base URL in blog.html

--- a/front/blog.html
+++ b/front/blog.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="api-base-url" content="http://localhost:3000">
+	<meta name="api-base-url" content="https://poder-partido-back.vercel.app/">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<title>PODER — Blog</title>
 	<link rel="stylesheet" href="styles.css">
