Adding dark and light style and solving empty spaces

--- a/front/blog.html
+++ b/front/blog.html
@@ -16,6 +16,7 @@
 		<nav class="header__nav" aria-label="Navegación">
 			<a class="header__navLink" href="index.html#propuestas">Propuestas</a>
 			<a class="header__navLink" href="blog.html">Blog</a>
+			<button type="button" class="header__navLink themeToggle" data-theme-toggle aria-label="Cambiar tema"></button>
 		</nav>
 	</header>
 
