--- a/front/index.html
+++ b/front/index.html
@@ -16,6 +16,7 @@
         <nav class="header__nav" aria-label="Navegación">
             <a class="header__navLink" href="#propuestas">Propuestas</a>
             <a class="header__navLink" href="blog.html">Blog</a>
+            <button type="button" class="header__navLink themeToggle" data-theme-toggle aria-label="Cambiar tema"></button>
         </nav>
     </header>
 	<div class="hero">
@@ -318,8 +319,8 @@
                     </p>
                     <ul class="propuesta__ul">
                         <li class="propuesta__li">Construcción de establecimientos penitenciarios (alcaldías y cárceles) 
-                            por sistema de gestión público-privada. </li>
-                        <li class="propuesta__li"><li class="propuesta__li">Construcción de establecimientos penitenciarios (alcaldías y cárceles) por sistema de gestión público-privada. </li>
+                            por sistema de gestión público-privada.</li>
+                        <li class="propuesta__li">Construcción de establecimientos penitenciarios (alcaldías y cárceles) por sistema de gestión público-privada. </li>
                         <li class="propuesta__li">Reformulación de la legislación penitenciaria</li>
                     </ul>
                     <p class="propuesta__paragraph">
@@ -331,9 +332,8 @@
                     </p>
                     <ul class="propuesta__ul">
                         <li class="propuesta__li">Reformular la imputabilidad de los menores.</li>
-                        <li class="propuesta__li"><li class="propuesta__li">Agilizar los procesos penales que tanto demoran en la justicia.</li>
-                        <li class="propuesta__li">Impulsar el tratamiento de proyectos en las cámaras para eliminar de la 
-                        legislación penal clausulas garantistas. </li>
+                        <li class="propuesta__li">Agilizar los procesos penales que tanto demoran en la justicia.</li>
+                        <li class="propuesta__li">Impulsar el tratamiento de proyectos en las cámaras para eliminar de la legislación penal clausulas garantistas. </li>
                         <li class="propuesta__li">Saneamiento de todas las fuerzas de seguridad, haciendo eje en la lucha contra la corrupción y el narcotráfico.</li>
                         <li class="propuesta__li">Coadyuvar para que las fuerzas de seguridad vuelvan a tener autoridad profesional y moral, capacitando y equipando a las mismas con las herramientas necesarias para cumplir exitosamente con su área.</li>
                         <li class="propuesta__li">Dar especial atención a la lucha contra el narcotráfico, atacando cada una de las células y organizaciones delictivas, controlando límites provinciales y espacio aéreo con radares y personal calificado, dotando a su personal del conocimiento, herramientas de trabajo, de protección junto con el manejo y aplicación de las nuevas tecnologías.</li>
